# gpr200-fa2023-ryan-coyle

./: CMakeLists.txt
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment2_sunset/: main.cpp
assignments/assignment2_sunset/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment3_textures/: main.cpp
assignments/assignment3_textures/assets/: characterShader.frag
assignments/assignment4_transformations/: main.cpp
assignments/assignment4_transformations/assets/: vertexShader.vert
assignments/assignment5_camera/: main.cpp
assignments/assignment5_camera/assets/: vertexShader.vert
assignments/assignment6_proceduralGeometry/: main.cpp
assignments/assignment7_lighting/: main.cpp
assignments/assignment7_lighting/assets/: defaultLit.frag  unlit.vert
assignments/finalProject/: CMakeLists.txt  main.cpp
assignments/finalProject/assets/: characterShader.vert  defaultLit.frag  defaultLit.vert  fragmentShader.frag  vertexShader.vert
core/rc/: camera.h  procGen.cpp  procGen.h  shader.cpp  shader.h  texture.cpp  texture.h  transformations.h
